# tableau-graphQL-mcp

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  server.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
src/tableau_graphql_mcp/: __init__.py  __main__.py  client.py  config.py  examples.py  impact.py  lineage.py  search.py  server.py
tests/: test_client.py  test_config.py  test_examples.py  test_impact.py  test_lineage.py  test_live.py  test_properties.py  test_search.py  test_server_smoke.py  test_server_tools.py  test_tool_contract.py  tool_contract.json
